- expand test cases